BSM-65: Seperate multiple packages to be able to pull them in karaf. Also refactor the TransactionAwareBeanProxyFactory to only use standard JDK Proxy-mechanisms, instead of aop or javaassist as that caused karaf class loader issues